# soda

./: .clang-format  CMakeLists.txt
include/soda/: environment.hpp  seqs.hpp  strings.hpp
src/: environment.cpp  strings.cpp  strings.hpp
